fix overflow about width

--- a/pages/about/styles.scss
+++ b/pages/about/styles.scss
@@ -38,8 +38,8 @@
     flex-direction: column;
 
     width: 100%;
-    
-    padding-left: 800px;
+
+    padding: 0 20px 0 750px;
   }
 
   &__first-section-title-outline {
